# magic-files

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: config.py  drive.py  gemini.py  handlers.py  main.py  oauth.py  state.py
scripts/: auth_drive.py  deploy.sh  post-install.sh
